--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= f.label :category_id %>
-    <%= f.text_field :category_id %>
+    <%= f.collection_select :category_id, Category.order(:name), :id, :name, include_blank: true, :prompt => "Select One Category" %>
   </div>
 
   <div class="actions">
