--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -13,24 +13,24 @@
 
   <div class="field">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <div><%= f.text_field :name %></div>
   </div>
 
   <div class="field">
     <%= f.label :price %>
-    <%= f.number_field :price %>
+    <div><%= f.number_field :price %></div>
   </div>
 
   <div class="field">
     <%= f.label :photo %>
-    <%= f.text_field :photo %>
+    <div><%= f.text_field :photo %></div>
   </div>
 
   <div class="field">
     <%= f.label :category_id %>
-    <%= f.collection_select :category_id, Category.order(:name), :id, :name, include_blank: true, :prompt => "Select One Category" %>
+    <div style="color:black"><%= f.collection_select :category_id, Category.order(:name), :id, :name, include_blank: true, :prompt => "Select One Category" %></div>
   </div>
-
+  <br>
   <div class="actions">
     <%= f.submit %>
   </div>
