--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<h1 class="col-md-6">Products</h1>
+
+<form class="navbar-form navbar col-md-6" role="search">
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Search">
+  </div>
+<button type="submit" class="btn btn-default">Submit</button>
+</form>
 
 <table class="table table-striped table-hover ">
   <thead>
