--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="col-md-6">Products</h1>
+<h1 class="col-md-6">Administrador de productos</h1>
+<br>
+<br>
+<br>
 
 <form class="navbar-form navbar col-md-6" role="search">
   <div class="form-group">
