--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Product</h1>
-
+<h1>Nuevo Producto</h1>
+<br>
 <%= render 'form', product: @product %>
-
+<br>
 <%= link_to 'Back', products_path %>
