--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,10 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Requests</h1>
+<h1>Pedido</h1>
 
-<table>
+<table class="table table-striped table-hover ">
   <thead>
     <tr>
+      <th>Mesa N°</th>
       <th>Comentario</th>
       <th colspan="3"></th>
     </tr>
@@ -13,7 +14,8 @@
   <tbody>
     <% @requests.each do |request| %>
       <tr>
-       
+        <td><%= request.table.number %></td>
+        <td><%= request.comment %></td>
         <td><%= link_to 'Show', request %></td>
         <td><%= link_to 'Edit', edit_request_path(request) %></td>
         <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
