--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,9 +15,9 @@
 <table class="table table-striped table-hover ">
   <thead>
     <tr>
-      <th>Photo</th>
       <th>Name</th>
       <th>Price</th>
+      <th>Photo</th>
       <th>Category</th>
       <th colspan="3"></th>
     </tr>
@@ -26,9 +26,9 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= image_tag(product.photo, size:"80") %></td>
         <td><%= product.name %></td>
         <td><%= product.price %></td>
+        <td><%= product.photo %></td>
         <td><%= product.category.name %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
