--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @product.category.name %>
+  <%= @product.category %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
