--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -4,119 +4,81 @@
 
 
 
+<div class="row">
+  <div class="col-md-6">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Comidas</th>
+          <th colspan="1"></th>
+        </tr>
+      </thead>
 
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container">
+      <tbody>
+        <% @foods.each do |food| %>
+        <tr>
+          <td><%= food.name %></td>
+          <td><%= link_to 'Agregar producto'%></td>
+        </tr>
+        <% end %>
 
-
-
-
-
-
- <table id="cart" class="table table-hover table-condensed">
-            <thead>
-            <tr>
-              <th style="width:50%">PRODUCTOS</th>
-              <th style="width:10%">PRECIO</th>
-            
-            </tr>
-          </thead>
-          <tbody>
-              <% @product.each do |product| %>
-            <tr>
-              <td data-th="Product">
-                <div class="row">
-                  <div class="col-sm-2 hidden-xs"><%= image_tag(product.photo, size:"80") %></div>
-                  <div class="col-sm-10">
-                    <h4 class="nomargin"><%= product.name %></h4>
-                    <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-              </td>
-              <td data-th="Price"><%= product.price %></td>
-              <td class="actions" data-th="">
-                <button class="btn btn-info btn-sm"><i class="fa fa-check-circle"></i> agregar</button>
-                                
-              </td>
-            </tr>
-            <% end %>
-          </tbody>
-          
-        </table>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 
+<div class="row">
+  <div class="col-md-6">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Tragos</th>
+          <th colspan="1"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @drinks.each do |drink| %>
+        <tr>
+          <td><%= drink.name %></td>
+          <td><%= link_to 'Agregar producto'%></td>
+        </tr>
+        <% end %>
+
+      </tbody>
+    </table>
+  </div>
+</div>
+
+
+<%= form_for(@request) do |f| %>
+  <% if @request.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@request.errors.count, "error") %> prohibited this request from being saved:</h2>
+
+    <ul>
+      <% @request.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+  <% end %>
 
 
 
+  <div class="field">
+   <%= f.label :comment %>
+   <div> 
+     <%= f.text_field :comment %>  
+   </div>
+  </div>
 
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<style>.table>tbody>tr>td, .table>tfoot>tr>td{
-    vertical-align: middle;
-}
-@media screen and (max-width: 600px) {
-    table#cart tbody td .form-control{
-    width:20%;
-    display: inline !important;
-  }
-  .actions .btn{
-    width:36%;
-    margin:1.5em 0;
-  }
-  
-  .actions .btn-info{
-    float:left;
-  }
-  .actions .btn-danger{
-    float:right;
-  }
-  
-  table#cart thead { display: none; }
-  table#cart tbody td { display: block; padding: .6rem; min-width:320px;}
-  table#cart tbody tr td:first-child { background: #333; color: #fff; }
-  table#cart tbody td:before {
-    content: attr(data-th); font-weight: bold;
-    display: inline-block; width: 8rem;
-  }
-  
-  
-  
-  table#cart tfoot td{display:block; }
-  table#cart tfoot td .btn{display:block;}
-  
-}</style>
 
 
 
