--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -15,13 +15,13 @@
 
   <div class="row">
     <div class="field">
-      <%= f.label :table_id %>
+      <%= f.label :Mesa %>
       <div style="color:black"> 
         <%= f.collection_select :table_id, Table.order(:number), :id, :number, include_blank: true, :prompt => "Selecciona una mesa" %> 
       </div>  
     </div>
   </div>
-
+  <br>
 
   <div class="actions">
     <%= f.submit %>
