--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -16,8 +16,8 @@
       <tr>
         <td><%= request.table.number %></td>
         <td><%= request.comment %></td>
-        <td><%= link_to 'Show', request %></td>
-        <td><%= link_to 'Edit', edit_request_path(request) %></td>
+        <td><%= link_to 'Actualizar Pedido', request %></td>
+        <td><%= link_to 'Cambiar Mesa', edit_request_path(request) %></td>
         <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Request', new_request_path %>
+<%= link_to 'Nuevo Pedido', new_request_path %>
