--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,86 +1,126 @@
 <p id="notice"><%= notice %></p>
 
 
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container">
+  <table id="cart" class="table table-hover table-condensed">
+            <thead>
+            <tr>
 
-
-
-<div class="row">
-  <div class="col-md-6">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Comidas</th>
-          <th colspan="1"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @foods.each do |food| %>
-        <tr>
-          <td><%= food.name %></td>
-          <td><%= link_to 'Agregar producto'%></td>
-        </tr>
-        <% end %>
-
-      </tbody>
-    </table>
-  </div>
+              <th style="width:50%">Product</th>
+              <th style="width:10%">Price</th>
+              <th style="width:22%" class="text-center">Subtotal</th>
+              <th style="width:10%"></th>
+            </tr>
+          </thead>
+          <tbody>
+          <% @products.each do |product| %>
+            <tr>
+              <td data-th="Product">
+                <div class="row">
+                  
+                  <div class="col-sm-10">
+                    <h4 class="nomargin"><%= product.name %></h4>
+                    <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
+                  </div>
+                </div>
+              </td>
+              <td data-th="Price"><%= product.price %></td>
+              <td data-th="Subtotal" class="text-center">1.99</td>
+              <td class="actions" data-th="">
+                
+                <button class="btn btn-success btn-sm"><i class="fa fa-check"></i></button>                
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+          <tfoot>
+            <tr class="visible-xs">
+              <td class="text-center"><strong>Total 1.99</strong></td>
+            </tr>
+            <tr>
+              
+              <td colspan="2" class="hidden-xs"></td>
+              <td><a href="#" class="btn btn-warning btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
+            </tr>
+            
+          </tfoot>
+        </table>
 </div>
 
+<div class="text-center">
+  <%= form_for(@request) do |f| %>
+    <% if @request.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@request.errors.count, "error") %> prohibited this request from being saved:</h2>
 
-<div class="row">
-  <div class="col-md-6">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Tragos</th>
-          <th colspan="1"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @drinks.each do |drink| %>
-        <tr>
-          <td><%= drink.name %></td>
-          <td><%= link_to 'Agregar producto'%></td>
-        </tr>
+      <ul>
+        <% @request.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
         <% end %>
-
-      </tbody>
-    </table>
-  </div>
-</div>
+      </ul>
+    </div>
+    <% end %>
 
 
-<%= form_for(@request) do |f| %>
-  <% if @request.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@request.errors.count, "error") %> prohibited this request from being saved:</h2>
 
-    <ul>
-      <% @request.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
+    <div class="field" >
+     <%= f.label :Comentarios %>
+     <div> 
+       <%= f.text_area  :comment %>  
+     </div>
+    </div>
+
+    <div class="actions">
+      <%= f.submit %>
+    </div>
   <% end %>
+</div>
 
 
 
-  <div class="field">
-   <%= f.label :comment %>
-   <div> 
-     <%= f.text_field :comment %>  
-   </div>
-  </div>
+<style>
+  .table>tbody>tr>td, .table>tfoot>tr>td{
+    vertical-align: middle;
+}
+@media screen and (max-width: 600px) {
+    table#cart tbody td .form-control{
+    width:20%;
+    display: inline !important;
+  }
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
-
+  .actions .btn{
+    width:36%;
+    margin:1.5em 0;
+  }
+  
+  .actions .btn-info{
+    float:left;
+  }
+  .actions .btn-danger{
+    float:right;
+  }
+  
+  table#cart thead { display: none; }
+  table#cart tbody td { display: block; padding: .6rem; min-width:320px;}
+  table#cart tbody tr td:first-child { background: #333; color: #fff; }
+  table#cart tbody td:before {
+    content: attr(data-th); font-weight: bold;
+    display: inline-block; width: 8rem;
+  }
+  
+  
+  
+  table#cart tfoot td{display:block; }
+  table#cart tfoot td .btn{display:block;}
+  
+}
+</style>
 
 
 
 <%= link_to 'Edit', edit_request_path(@request) %> |
 <%= link_to 'Back', requests_path %>
+
+
+     
