--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,54 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container">
-  <table id="cart" class="table table-hover table-condensed">
-            <thead>
-            <tr>
+<div class="col-md-6">
 
-              <th style="width:50%">Product</th>
-              <th style="width:10%">Price</th>
-              <th style="width:22%" class="text-center">Subtotal</th>
-              <th style="width:10%"></th>
-            </tr>
-          </thead>
-          <tbody>
-          <% @products.each do |product| %>
-            <tr>
-              <td data-th="Product">
-                <div class="row">
-                  
-                  <div class="col-sm-10">
-                    <h4 class="nomargin"><%= product.name %></h4>
-                    <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-              </td>
-              <td data-th="Price"><%= product.price %></td>
-              <td data-th="Subtotal" class="text-center">1.99</td>
-              <td class="actions" data-th="">
-                
-                <button class="btn btn-success btn-sm"><i class="fa fa-check"></i></button>                
-              </td>
-            </tr>
-            <% end %>
-          </tbody>
-          <tfoot>
-            <tr class="visible-xs">
-              <td class="text-center"><strong>Total 1.99</strong></td>
-            </tr>
-            <tr>
-              
-              <td colspan="2" class="hidden-xs"></td>
-              <td><a href="#" class="btn btn-warning btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
-            </tr>
-            
-          </tfoot>
-        </table>
+<table class="table table-striped table-hover ">
+  <thead>
+    <tr> 
+     <h3>Productos</h3> 
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @products.each do |product| %>
+      <tr>
+        <td><%= image_tag(product.photo, size: "70x50") %></td>
+        <td><%= product.name %></td>
+        <td class="actions" data-th="">                
+          <button class="btn btn-success btn-sm"><i class="fa fa-plus"></i></button>                
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
 </div>
 
-<div class="text-center">
+<div class="col-md-6">
   <%= form_for(@request) do |f| %>
     <% if @request.errors.any? %>
     <div id="error_explanation">
@@ -62,60 +40,23 @@
     </div>
     <% end %>
 
-
+<br>
+<br>
 
     <div class="field" >
-     <%= f.label :Comentarios %>
+     <h5>Comentario</h5>
      <div> 
-       <%= f.text_area  :comment %>  
+       <%= f.text_area  :comment, size: "50x12" %>  
      </div>
     </div>
 
-    <div class="actions">
-      <%= f.submit %>
+    <div class="">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
 
 
-
-<style>
-  .table>tbody>tr>td, .table>tfoot>tr>td{
-    vertical-align: middle;
-}
-@media screen and (max-width: 600px) {
-    table#cart tbody td .form-control{
-    width:20%;
-    display: inline !important;
-  }
-
-  .actions .btn{
-    width:36%;
-    margin:1.5em 0;
-  }
-  
-  .actions .btn-info{
-    float:left;
-  }
-  .actions .btn-danger{
-    float:right;
-  }
-  
-  table#cart thead { display: none; }
-  table#cart tbody td { display: block; padding: .6rem; min-width:320px;}
-  table#cart tbody tr td:first-child { background: #333; color: #fff; }
-  table#cart tbody td:before {
-    content: attr(data-th); font-weight: bold;
-    display: inline-block; width: 8rem;
-  }
-  
-  
-  
-  table#cart tfoot td{display:block; }
-  table#cart tfoot td .btn{display:block;}
-  
-}
-</style>
 
 
 
