--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,44 +1,72 @@
 <p id="notice"><%= notice %></p>
 
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="col-md-6">
 
-<table class="table table-striped table-hover ">
-  <thead>
-    <tr> 
-     <h3>Productos</h3> 
-    </tr>
-  </thead>
+<div class="row  ">
+  <div class="col-md-10">
+    <div class="col-md-6">
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= image_tag(product.photo, size: "70x50") %></td>
-        <td><%= product.name %></td>
-        <td>
-         <%= link_to 'Call Action', request_product_orders_path(@request.id,product.id), method: :post %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <table class="table table-striped table-hover " style="border-right: solid 0.5px grey; ">
+        <thead>
+          <tr> 
+           <h3>Seleccionar Productos</h3> 
+           <br>
+         </tr>
+       </thead>
 
+       <tbody>
+        <% @products.each do |product| %>
+        <tr>
+          <td><%= image_tag(product.photo, size: "60x40") %></td>
+          <td><%= product.name %></td>
+          <td>
+            <div class="">
+             <%= link_to 'Agregar al Pedido', request_product_orders_path(@request.id,product.id), method: :post %></div>
+           </td>
+         </tr>
+         <% end %>
+       </tbody>
+     </table>
+   </div>
+
+   <div class="col-md-6">
+
+      <table class="table table-striped table-hover " style="border-right: solid 0.5px grey; ">
+        <thead>
+          <tr> 
+           <h3>Ordenes</h3> 
+           <br>
+         </tr>
+       </thead>
+
+       <tbody>
+
+       </tbody>
+     </table>
+   </div>
+
+
+
+
+ </div>
 
 </div>
 
-<div class="col-md-6">
-  <%= form_for(@request) do |f| %>
-    <% if @request.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@request.errors.count, "error") %> prohibited this request from being saved:</h2>
 
-      <ul>
-        <% @request.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-    <% end %>
+<div class="col-md-6">
+
+  <%= form_for(@request) do |f| %>
+  <% if @request.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@request.errors.count, "error") %> prohibited this request from being saved:</h2>
+
+    <ul>
+      <% @request.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+  <% end %>
 
 <br>
 <br>
@@ -46,21 +74,19 @@
     <div class="field" >
      <h5>Comentario</h5>
      <div> 
-       <%= f.text_area  :comment, size: "50x12" %>  
+       <%= f.text_area  :comment, size: "110x15" %>  
      </div>
     </div>
 
-    <div class="">
+    <div>
       <%= f.submit nil, :class => 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
 
-<%= @request.user_id %>
-<%= @request.table_id %>
 
 
-<%= link_to 'Edit', edit_request_path(@request) %> |
+
 <%= link_to 'Back', requests_path %>
 
 
