Add and delete orders

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -38,9 +38,8 @@
            <br>
          </tr>
        </thead>
-
        <tbody>
-
+        <%= render @orders %>
        </tbody>
      </table>
    </div>
