--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -1,8 +1,8 @@
 <tr>
-	<td><%= image_tag(product.photo, size: "60x40") %></td>
-	<td><%= product.name %></td>
+	<td><%= image_tag(order.product.photo, size: "60x40") %></td>
+	<td><%= order.product.name %></td>
 	<td>
 	<div class="">
-	<%= link_to 'Agregar al Pedido', request_product_orders_path(@request.id,product.id), method: :post %></div>
+		<%= link_to 'Eliminar', order_destroy_path(order) %></div>
 	</td>
 </tr>
