--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
 <table class="table table-striped table-hover ">
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nombre</th>
       <th>Price</th>
       <th>Photo</th>
       <th>Category</th>
