--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,8 +2,8 @@
 
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-<div class="row  ">
-  <div class="col-md-10">
+<div class="row ">
+  <div class="col-md-12">
     <div class="col-md-6">
 
       <table class="table table-striped table-hover " style="border-right: solid 0.5px grey; ">
@@ -31,7 +31,7 @@
 
    <div class="col-md-6">
 
-      <table class="table table-striped table-hover " style="border-right: solid 0.5px grey; ">
+      <table class="table table-striped table-hover " style="border-left: solid 0.5px grey; ">
         <thead>
           <tr> 
            <h3>Ordenes</h3> 
