method close_table status

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Pedido</h1>
+<!-- CAMARERO -->
+<% if current_user.admin? || current_user.waiter? %>
+<div class="container fondo">
+<h1>Administrar Pedidos</h1>
 
 <table class="table table-striped table-hover ">
   <thead>
@@ -19,7 +22,8 @@
       <td><%= request.comment %></td>
       <td><%= request.orders.count %></td>
       <td><%= link_to 'Actualizar Pedido', request_path(request.id) %></td>
-      <td><%= link_to 'Eliminar Pedido', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= link_to 'Terminar Pedido', request_close_table_path(request) %></td>
+      <td><%= link_to 'Eliminar Pedido', request, method: :delete, data: { confirm: 'Estas seguro ?' } %></td>
     </tr>
     <% end %>
   </tbody>
@@ -27,4 +31,11 @@
 
 <br>
 
+
 <%= link_to 'Nuevo Pedido', new_request_path %>
+
+
+</div>
+<% end %>
+
+
