--- a/app/views/requests/kitchen.html.erb
+++ b/app/views/requests/kitchen.html.erb
@@ -1,11 +1,88 @@
+<div class="col-md-3 left">
 <% @requests.each do |request| %>
 	<ul>
-		<%= request.id %>
+		<li>MESA</li>
+		<li><%= request.table.id %></li>
+		<li></li>
+		<li>COMENTARIO</li>
+		<li><%= request.comment %></li>
+		<li></li>
+		<li>PRODUCTOS</li>
 		<% request.orders.each do |order| %>
-		<li>
-			<%= order.product.name %>
-		</li>
+		<li><%= order.product.name %></li>
+		
 	<% end %>
 	</ul>
 <% end %>
+</div>
+
+
+
+
+<style>
+	ul > li {
+
+	}
+	
+	
+</style>
+
+
+
+<!-- <div class="col-md-4">
+	<table class="table table-striped table-hover ">
+		<thead>
+			<tr>
+				<th>N° Pedido</th>
+				<th>Comentario</th>
+			</tr>
+
+		</thead>
+
+		<tbody>
+			<% @requests.each do |request| %>
+			<tr>
+				<td><%= request.id %></td>
+				<td><%= request.comment %></td> 
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
+ -->
+
+
+
+<!-- <div class="col-md-10">
+	<table class="table table-hover ">
+		<thead>
+			<tr>
+				
+				<th>Pedido numero</th>
+				<th>Comentarios</th>
+
+			</tr>
+		</thead>
+
+		<tbody>
+			<% @requests.each do |request| %>
+			<tr>
+				<td style="background-color: grey"><%= request.id %></td>
+				<td><%= request.comment %></td>
+			</tr>
+			
+			<% request.orders.each do |order| %>
+			<tr>
+				<td><%= order.product.name %></td>
+			</tr>
+				
+			<% end %>
+			<% end %>
+		</tbody>
+	</table>
+</div>
+
+ -->
+
+
 
