--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -1,8 +1,9 @@
-<tr>
+<tr id="order_<%= order.id %>">
 	<td><%= image_tag(order.product.photo, size: "60x40") %></td>
 	<td><%= order.product.name %></td>
 	<td>
-	<div class="">
-		<%= link_to 'Eliminar', order_destroy_path(order) %></div>
+	<div>
+		<%= link_to 'Eliminar', order,method: :delete, remote: true %>
+	</div>
 	</td>
 </tr>
