--- a/app/views/requests/kitchen.html.erb
+++ b/app/views/requests/kitchen.html.erb
@@ -1,4 +1,4 @@
- <meta http-equiv="refresh" content="15" />
+
 <% @requests.each do |request| %>
 	<div class="col-md-3-centered  pedidos">
 		<ul class="list-group">
@@ -23,21 +23,13 @@
 
 
 <style>
-.pedidos{
-	
-	border: solid 1px grey;
-	margin-right: ;
-	margin-top: 5px; 
 
-}
-	
- ul > li{
-	list-style: none;
-	padding-left: 50px;
-}
 	
 </style>
 
+<script>setTimeout(function(){
+   window.location.reload(1);
+}, 5000);</script>
 
 
 <!-- <div class="col-md-4">
