--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,20 @@
  *= require_tree .
  *= require_self
  */
+	
+ ul > li{
+	list-style: none;
+	padding-left: 50px;
+}
+
+.pedidos{
+	
+	border: solid 1px grey;
+	margin-right: ;
+	margin-top: 5px;
+
+}
+
+.hotfix{
+	height: 100px;
+}
