--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -24,7 +24,8 @@
   <br>
 
   <div class="actions">
-    <%= f.submit %>
+   
+  <%= f.submit nil, :class => 'btn-primary' %>
   </div>
 <% end %>
 
