--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Request</h1>
-
+<div class="">
+<h1>Nuevo Pedido</h1>
+<br>
 <%= render 'form', request: @request %>
-
+<br>
 <%= link_to 'Back', requests_path %>
+</div>
