--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= form_for(category) do |f| %>
   <% if category.errors.any? %>
     <div id="error_explanation">
@@ -20,3 +21,4 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
