--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Category</h1>
+<div class="container">
+<h1>Edita Categoria</h1>
 
 <%= render 'form', category: @category %>
 
 <%= link_to 'Show', @category %> |
 <%= link_to 'Back', categories_path %>
+</div>
