--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="container">
 <h1>Seleccionar Mesa</h1>
 
 <%= render 'form', request: @request %>
 
 
 <%= link_to 'Back', requests_path %>
+</div>
