--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,33 +1,33 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row ">
+    <div class="col-md-12">
+      <div class="col-md-6">
 
-<div class="row ">
-  <div class="col-md-12">
-    <div class="col-md-6">
+        <table class="table table-striped table-hover " style="border-right: solid 0.5px grey; ">
+          <thead>
+            <tr> 
+             <h3>Seleccionar Productos</h3> 
+             <br>
+           </tr>
+         </thead>
 
-      <table class="table table-striped table-hover " style="border-right: solid 0.5px grey; ">
-        <thead>
-          <tr> 
-           <h3>Seleccionar Productos</h3> 
-           <br>
-         </tr>
-       </thead>
+         <tbody>
+          <% @products.each do |product| %>
+          <tr>
+            <td><%= image_tag(product.photo, size: "60x40") %></td>
+            <td><%= product.name %></td>
+            <td>
+              <div class="">
+              <%= link_to 'Agregar', request_product_orders_path(@request.id,product.id), method: :post, remote: true%></div>
+             </td>
+           </tr>
+           <% end %>
+         </tbody>
+       </table>
+     </div>
 
-       <tbody>
-        <% @products.each do |product| %>
-        <tr>
-          <td><%= image_tag(product.photo, size: "60x40") %></td>
-          <td><%= product.name %></td>
-          <td>
-            <div class="">
-             <%= link_to 'Agregar al Pedido', request_product_orders_path(@request.id,product.id), method: :post, remote: true%></div>
-           </td>
-         </tr>
-         <% end %>
-       </tbody>
-     </table>
-   </div>
-
-   <div class="col-md-6">
+     <div class="col-md-6">
       <table class="table table-striped table-hover " style="border-left: solid 0.5px grey; ">
         <thead>
           <tr> 
@@ -39,8 +39,8 @@
         <%= render @orders %>
       </tbody>
     </table>
-    </div>
   </div>
+</div>
 </div>
 
 <div class="col-md-6">
@@ -69,7 +69,7 @@
 </div>
 <div class="col-md-12 hotfix"></div>
 
-
+</div>
 
 
 
