--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -10,11 +10,12 @@
       <a class="navbar-brand" href="<%= requests_path %>">e-restopubs</a>
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
       <ul class="nav navbar-nav">
-      <li><a href="<%= requests_path %>">Pedidos</a></li>
-      <li><a href="<%= requests_kitchen_path %>">Cocina</a></li>
-       
+        <li><a href="<%= requests_path %>">Pedidos</a></li>
+        <li><a href="<%= requests_kitchen_path %>">Cocina</a></li>
+
+
       </ul>
 
 
@@ -22,23 +23,29 @@
       <ul class="nav navbar-nav navbar-right">
 
        <% if user_signed_in? %>
-       <a class="navbar-brand">Bienvenido <span> <%= current_user.name%></span></a>
+       
+       <li>
+         <a href="<%= destroy_user_session_path %>" data-method='delete'>Salir</a>
+       </li>
        <li> 
-        <a href="<%= destroy_user_session_path %>" data-method='delete'>
-         <span>Salir</span>
-       </a>
-     </li>
+         <a>Bienvenido <%= current_user.name.capitalize%></a>  
+       </li>
+       
 
-     <% else %>
+       <% else %>
 
-     <li><a href="<%= new_user_session_path %>"> Login </a></li>
-     <li><a href="<%= new_user_registration_path %>"> Registrarse </a></li>
-     <% end %>
-   </ul>
+       <li>
+        <a href="<%= new_user_session_path %>"> Login </a>
+      </li>
+      <li>
+        <a href="<%= new_user_registration_path %>"> Registrarse </a>
+      </li>
+      <% end %>
+    </ul>
 
 
 
- </div>
+  </div>
 </div>
 </nav>
 
