--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,9 +15,9 @@
 <table class="table table-striped table-hover ">
   <thead>
     <tr>
+      <th>Photo</th>
       <th>Nombre</th>
       <th>Price</th>
-      <th>Photo</th>
       <th>Category</th>
       <th colspan="3"></th>
     </tr>
@@ -26,13 +26,13 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
+        <td><%= image_tag(product.photo, size: "60x40") %></td>
         <td><%= product.name %></td>
         <td><%= product.price %></td>
-        <td><%= product.photo %></td>
         <td><%= product.category.name %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'ver', product %></td>
+        <td><%= link_to 'Editar', edit_product_path(product) %></td>
+        <td><%= link_to 'Eliminar', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -40,4 +40,5 @@
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'Nuevo Producto', new_product_path %>
+<div class="hotfix"></div>
