--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,11 +12,12 @@
 
     <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
       <ul class="nav navbar-nav">
+    
         <li><a href="<%= requests_path %>">Pedidos</a></li>
         <li><a href="<%= requests_kitchen_path %>">Cocina</a></li>
         <li><a href="<%= products_path %>">Productos</a></li>
         <li><a href="<%= categories_path %>">Categorias</a></li>
-
+      
 
       </ul>
 
@@ -37,7 +38,7 @@
        <% else %>
 
        <li>
-        <a href="<%= new_user_session_path %>"> Login </a>
+        <a href="<%= new_user_session_path %>"> Ingresar </a>
       </li>
       <li>
         <a href="<%= new_user_registration_path %>"> Registrarse </a>
