--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,32 +4,32 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :nombre %><br />
     <%= f.text_field :name, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :address %><br />
+    <%= f.label :Direccion %><br />
     <%= f.text_field :address %>
   </div>
 
   <div class="field">
-    <%= f.label :photo %><br />
+    <%= f.label :Foto %><br />
     <%= f.text_field :photo %>
   </div>
 
   <div class="field">
-    <%= f.label :phone %><br />
+    <%= f.label :Telefono %><br />
     <%= f.text_field :phone %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :Email %><br />
     <%= f.email_field :email %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :Contraseña %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
@@ -37,13 +37,13 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :Confirma_contraseña %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-
+  <br>
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Registrarse" %>
   </div>
 <% end %>
-
+<br>
 <%= render "devise/shared/links" %>
