--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,16 +1,21 @@
 <p id="notice"><%= notice %></p>
-
+<div class="container">
 <h1 class="col-md-6">Administrador de productos</h1>
 <br>
 <br>
 <br>
 
-<form class="navbar-form navbar col-md-6" role="search">
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Search">
-  </div>
-<button type="submit" class="btn btn-default">Submit</button>
-</form>
+
+<div class="btn btn-default" style="float: right;">
+<%= form_tag(products_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Buscar Producto" %>
+    <%= submit_tag "Buscar", :name => nil %>
+<% end %>
+</div>
+
+<br>
+<br>
+
 
 <table class="table table-striped table-hover ">
   <thead>
@@ -42,3 +47,4 @@
 
 <%= link_to 'Nuevo Producto', new_product_path %>
 <div class="hotfix"></div>
+</div>
