--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,6 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="<%= requests_path %>">e-restopubs</a>
     </div>
@@ -17,6 +18,7 @@
         <li><a href="<%= requests_kitchen_path %>">Cocina</a></li>
         <li><a href="<%= products_path %>">Productos</a></li>
         <li><a href="<%= categories_path %>">Categorias</a></li>
+        <li><a href="<%= requests_checkout_path %>">Checkout</a></li>
       
 
       </ul>
