views and charts

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
         <li><a href="<%= requests_kitchen_path %>">Cocina</a></li>
         <li><a href="<%= products_path %>">Productos</a></li>
         <li><a href="<%= categories_path %>">Categorias</a></li>
-        <li><a href="<%= requests_checkout_path %>">Checkout</a></li>
+       <li ><a style="border:solid 1px white" href="<%= requests_checkout_path %>">Checkout</a></li>
       
 
       </ul>
