--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
-<div class="container">
-<h1 class="col-md-6">Administrador de productos</h1>
+<div class="container col-md-12 responsive">
+<h1 class="col-md-10">Administrador de productos</h1>
 <br>
 <br>
 <br>
@@ -20,10 +20,10 @@
 <table class="table table-striped table-hover ">
   <thead>
     <tr>
-      <th>Photo</th>
+      <th></th>
       <th>Nombre</th>
-      <th>Price</th>
-      <th>Category</th>
+      <th>Precio</th>
+      <th>Categoria</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -48,3 +48,13 @@
 <%= link_to 'Nuevo Producto', new_product_path %>
 <div class="hotfix"></div>
 </div>
+
+
+
+
+
+<style>
+
+
+
+</style>
