--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
-<div class="container">
+<div class="wrap ">
 
 <% if current_user.admin? || current_user.waiter? %>
-<div class="container fondo">
+<div class="wrap fondo">
   <h1>Administrar Pedidos</h1>
   <br>
-  <table class="table table-striped table-hover ">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
         <th>Mesa N°</th>
