--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,8 @@
   <nav class="nav-bar navbar-inverse" role="navigation">
       <div id ="top-menu" class="container-fluid active">
           <a class="navbar-brand" href="#">Brand</a>
-          <ul class="nav navbar-nav">        
+          <ul class="nav navbar-nav">   
+               
               <form id="qform" class="navbar-form pull-left" role="search">
                  <input type="text" class="form-control" placeholder="Search" />                        
                </form>
@@ -37,7 +38,7 @@
                       <li><a href="#"><span class="fa fa-user"></span>My Profile</a></li>
                       <li><a href="#"><span class="fa fa-gear"></span>Settings</a></li>
                       <li class="divider"></li>
-                      <li><a href="#"><span class="fa fa-power-off"></span>Logout</a></li>
+                      <li><a href="#"><span class="fa fa-power-off"></span>Salir</a></li>
                   </ul>
               </li>
               
@@ -47,18 +48,18 @@
   <aside id="side-menu" class="aside" role="navigation">            
         <ul class="nav nav-list accordion">                    
           <li class="nav-header">
-            <div class="link"><i class="fa fa-lg fa-globe"></i>Productos<i class="fa fa-chevron-down"></i></div>
+            <div class="link"><i class="glyphicon glyphicon-glass"></i>Productos<i class="fa fa-chevron-down"></i></div>
             <ul class="submenu">
               <li><a href="<%= new_product_path %>">Nuevo Producto</a></li>  
-              <li><a href="<%= products_path %>">Todos los Productos</a></li>  
+              <li><a href="<%= products_path %>">Productos</a></li>  
             </ul>
           </li>
           
           <li class="nav-header">
-            <div class="link"><i class="fa fa-lg fa-users"></i>Users<i class="fa fa-chevron-down"></i></div>
+            <div class="link"><i class="glyphicon glyphicon-list-alt"></i>Pedidos<i class="fa fa-chevron-down"></i></div>
             <ul class="submenu">
-              <li><a href="#">Users</a></li>
-              <li><a href="#">New User</a></li>
+              <li><a href="<%= new_request_path %>">Nuevo Pedido</a></li>
+              <li><a href="<%= requests_path %>">Pedidos</a></li>
             </ul>
           </li>
           
@@ -113,9 +114,11 @@
 
 
 <style>
-    .wrap {
+    .wrap .nav-bar {
   position: relative;
 }
+
+
 .wrap .nav-bar .navbar-brand {
   margin-top: 15px;
 }
