--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,22 +1,22 @@
 <p id="notice"><%= notice %></p>
 <div class="container col-md-12 responsive">
-<h1 class="col-md-10">Administrador de productos</h1>
+<h2 class="col-md-10">Administrador de productos</h2>
 <br>
 <br>
 <br>
-
-
-<div class="btn btn-default" style="float: right;">
+  
+<div class="row">
+<div class="btn btn-default" style="float: right; margin-right: 25px;">
 <%= form_tag(products_path, :method => "get", id: "search-form") do %>
     <%= text_field_tag :search, params[:search], placeholder: "Buscar Producto" %>
     <%= submit_tag "Buscar", :name => nil %>
 <% end %>
 </div>
-
+</div>
 <br>
 <br>
 
-
+<div class="table-responsive">
 <table class="table table-striped table-hover ">
   <thead>
     <tr>
@@ -42,12 +42,11 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
 <br>
 
-<%= link_to 'Nuevo Producto', new_product_path %>
-<div class="hotfix"></div>
-</div>
+
+
 
 
 
@@ -55,6 +54,5 @@
 
 <style>
 
-
-
+            
 </style>
