--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 <div class="container">
   <div class="row ">
-    <div class="col-md-12">
-      <div class="col-md-6">
+    <div class="col-md-10">
+      <div style="overflow-y: scroll; height: 500px" class="col-md-6">
 
         <table class="table table-striped table-hover " style="border-right: solid 0.5px grey; ">
           <thead>
@@ -34,25 +34,7 @@
        </table>
      </div>
 
-     <div class="col-md-6">
-      <table class="table table-striped table-hover " style="border-left: solid 0.5px grey; ">
-        <thead>
-          <tr> 
-           <h3>Ordenes</h3> 
-           <br>
-           <br>
-           <br>
-         </tr>
-       </thead>
-       <tbody id="orders">
-        <%= render @orders %>
-      </tbody>
-    </table>
-  </div>
-</div>
-</div>
-
-<div class="col-md-6">
+    <div class="col-md-3">
   <%= form_for(@request) do |f| %>
   <% if @request.errors.any? %>
   <div id="error_explanation">
@@ -72,13 +54,31 @@
  </div>
 
  <div>
-  <%= f.submit nil, :class => 'btn btn-primary' %>
+  <%= f.submit 'Agregar Pedido', :class => 'btn btn-primary' %>
 </div>
 <% end %>
 </div>
-<div class="col-md-12 hotfix"></div>
 
+     <div class="col-md-6">
+      <table class="table table-striped table-hover " style="border-left: solid 0.5px grey; ">
+        <thead>
+          <tr> 
+           <h3>Ordenes</h3> 
+           <br>
+           
+         </tr>
+       </thead>
+       <tbody id="orders">
+        <%= render @orders %>
+
+      </tbody>
+    </table>
+  </div>
 </div>
+</div>
+
+
+
 
 
 
