--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
-<div class="container col-md-11 responsive">
-<h1 class="col-md-10">Productos</h1>
+
+<div class="container col-md-10">
+<h1>Productos</h1>
 
   
 <div class="row">
@@ -14,7 +14,7 @@
 <br>
 <br>
 
-<div class="table-responsive">
+<div style="overflow-y: scroll; height: 300px"  class="table-responsive">
 <table class="table table-striped table-hover ">
   <thead>
     <tr>
@@ -41,7 +41,6 @@
   </tbody>
 </table>
 </div>
-<br>
 
 
 
