--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<div class="container col-md-10">
 
 <p>
   <strong>Nombre:</strong>
@@ -22,3 +22,4 @@
 
 <%= link_to 'Editar', edit_product_path(@product) %> |
 <%= link_to 'volver', products_path %>
+</div>
