--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container col-md-10">
 <%= form_for(request) do |f| %>
   <% if request.errors.any? %>
   <div id="error_explanation">
