--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
-<div class="wrap ">
 
-<% if current_user.admin? || current_user.waiter? %>
-<div class="wrap fondo">
+
+
+
+<div class="container col-md-10">
   <h1>Administrar Pedidos</h1>
   <br>
   <table class="table table-striped table-hover">
@@ -30,6 +30,6 @@
   <br>
  
 </div>
-<% end %>
+
 
 <!--  <%= pie_chart @categories %> -->
