--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container col-md-10">
 <%= form_for(product) do |f| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
@@ -37,3 +38,4 @@
     <%= f.submit 'Crear producto', class: 'btn btn-primary' %>
   </div>
 <% end %>
+</div>
