--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,9 @@
+
+<div class="container col-md-10">
 <h1>Editing Product</h1>
 
 <%= render 'form', product: @product %>
 
 <%= link_to 'Show', @product %> |
 <%= link_to 'Back', products_path %>
+</div>
