--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,1 +1,7 @@
-<%= pie_chart @categories %>
+
+
+<div class="col-md-10 text-center">
+	<h1>Productos más vendidos</h1>
+	<%= pie_chart @products_by_order %>
+</div>
+</div>
