--- a/app/views/requests/checkout.html.erb
+++ b/app/views/requests/checkout.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container col-md-10">
 	<% @requests.each do |request| %>
 	<div class="col-md-10 pedidos">
 		
