--- a/app/views/tables/_form.html.erb
+++ b/app/views/tables/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container col-md-10">
 <%= form_for(table) do |f| %>
   <% if table.errors.any? %>
     <div id="error_explanation">
@@ -20,3 +21,4 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
