--- a/app/views/tables/edit.html.erb
+++ b/app/views/tables/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="container col-md-10">
 <h1>Editing Table</h1>
 
 <%= render 'form', table: @table %>
 
 <%= link_to 'Show', @table %> |
 <%= link_to 'Back', tables_path %>
+</div>
