--- a/app/views/tables/index.html.erb
+++ b/app/views/tables/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<div class="container col-md-10">
 
 <h1>Tables</h1>
 
@@ -25,3 +25,4 @@
 <br>
 
 <%= link_to 'New Table', new_table_path %>
+</div>
