--- a/app/views/tables/show.html.erb
+++ b/app/views/tables/show.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
 
+<div class="container col-md-10">
 <p>
   <strong>Number:</strong>
   <%= @table.number %>
@@ -7,3 +7,4 @@
 
 <%= link_to 'Edit', edit_table_path(@table) %> |
 <%= link_to 'Back', tables_path %>
+</div>
