--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-md-10">
+<div class="col-md-10">
 <%= form_for(product) do |f| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
