--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<div class="container">
+<div class="col-md-10">
 <h1>Categorias</h1>
 
 <table class="table table-striped table-hover">
