--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     
@@ -29,7 +30,7 @@
     <div class="wrap">
   <nav class="nav-bar navbar-inverse" role="navigation">
       <div id ="top-menu" class="container-fluid active">
-          <a class="navbar-brand" href="#">Brand</a>
+          <a class="navbar-brand" href="#">e-Pubs</a>
           <ul class="nav navbar-nav">   
 
               <form id="qform" class="navbar-form pull-left" role="search">
@@ -39,8 +40,7 @@
               <li class="dropdown movable">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="caret"></span><h4 class="glyphicon glyphicon-user"></h4></a>
                   <ul class="dropdown-menu" role="menu">
-                      <li><a href="#"><span class="fa fa-user"></span>My Profile</a></li>
-                      <li><a href="#"><span class="fa fa-gear"></span>Settings</a></li>
+                      <li><a href="<%= admin_root_url %>"><span class="fa fa-user"></span>Administrador</a></li>
                       <li class="divider"></li>
                       <li><a href="<%= destroy_user_session_path %>" data-method='delete'><span class="fa fa-power-off"></span>Salir</a></li>
                   </ul>
@@ -93,6 +93,7 @@
       </a>      
       </div>
     <section class="content-inner">
+    <p id="notice"><%= notice %></p>
       <%= yield %>
     </section>
   </div>  
