--- a/app/views/requests/_kitchen.html.erb
+++ b/app/views/requests/_kitchen.html.erb
@@ -1,4 +1,4 @@
-<div id="asd" class="container col-md-10">
+<div id="asd" class="col-md-10">
 	<div class="col-md-10">
 		<% requests.each do |request| %>
 			<div class="col-md-3-centered  pedidos">
