--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -2,7 +2,7 @@
 
 
 
-<div class="container col-md-10">
+<div class="col-md-10">
   <h1>Administrar Pedidos</h1>
   <br>
   <table class="table table-striped table-hover">
