--- a/app/views/tables/_form.html.erb
+++ b/app/views/tables/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-md-10">
+<div class="col-md-10">
 <%= form_for(table) do |f| %>
   <% if table.errors.any? %>
     <div id="error_explanation">
