favicon, layout, cancancan

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="row">
     <div class="field">
-      <%= f.label :Mesa %>
+      <%= f.label :Mesas_disponibles %>
       <div style="color:black"> 
         <%= f.collection_select :table_id, @tables, :id, :number, include_blank: true, :prompt => "Selecciona una mesa" %> 
       </div>  
