--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <div class="col-md-10">
-<h2>Sign up</h2>
+<h1>Registrate</h1>
+<br>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -8,27 +9,23 @@
     <%= f.label :nombre %><br />
     <%= f.text_field :name, autofocus: true %>
   </div>
-
+<br>
   <div class="field">
     <%= f.label :Direccion %><br />
     <%= f.text_field :address %>
   </div>
-
-  <div class="field">
-    <%= f.label :Foto %><br />
-    <%= f.text_field :photo %>
-  </div>
-
+<br>
+  
   <div class="field">
     <%= f.label :Telefono %><br />
     <%= f.text_field :phone %>
   </div>
-
+<br>
   <div class="field">
     <%= f.label :Email %><br />
     <%= f.email_field :email %>
   </div>
-
+<br>
   <div class="field">
     <%= f.label :Contraseña %>
     <% if @minimum_password_length %>
@@ -36,14 +33,14 @@
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
-
+<br>
   <div class="field">
     <%= f.label :Confirma_contraseña %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
   <br>
   <div class="actions">
-    <%= f.submit "Registrarse" %>
+    <%= f.submit "Registrarse", :class => 'btn btn-primary' %>
   </div>
 <% end %>
 <br>
