--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,7 @@
 <br>
 <br>
 
-<div style="overflow-y: scroll; height: 300px"  class="table-responsive">
+<div style="overflow-y: scroll; height: 300px; border: 1px dashed #bebebe;"  class="table-responsive">
 <table class="table table-striped table-hover ">
   <thead>
     <tr>
@@ -39,6 +39,7 @@
       </tr>
     <% end %>
   </tbody>
+
 </table>
 </div>
 
