--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,4 @@
+<% if current_user.admin? %>
 <div class="col-md-10">
  <div class="col-md-6">
 <h1>Nuevo Producto</h1>
@@ -6,3 +7,4 @@
 
 </div>
 </div>
+<% end %>
