--- a/app/views/requests/_kitchen.html.erb
+++ b/app/views/requests/_kitchen.html.erb
@@ -1,3 +1,4 @@
+<% if current_user.admin? || current_user.chef?  %>
 <div id="asd" class="col-md-10">
 	<div class="col-md-10">
 		<% requests.each do |request| %>
@@ -18,7 +19,5 @@
 	<% end %>
 	</div>
 </div>
+<% end %>
 
-<script>
-
-</script>
