--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,6 +1,6 @@
 
 
-
+<% if current_user.admin? || current_user.waiter?  %> 
 
 <div class="col-md-10">
   <h1>Administrar Pedidos</h1>
@@ -31,5 +31,4 @@
  
 </div>
 
-
-<!--  <%= pie_chart @categories %> -->
+<% end %>
